infrastructure/access/resources.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: protected-access
  namespace: edge
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    sectionName: admin
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    sectionName: test
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    sectionName: staging
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    sectionName: apps
  oidc:
    provider:
      issuer: https://${IDENTITY_HOST}/realms/elektro
      authorizationEndpoint: https://${IDENTITY_HOST}/realms/elektro/protocol/openid-connect/auth
      tokenEndpoint: http://keycloak.identity.svc.cluster.local:8080/realms/elektro/protocol/openid-connect/token
    clientID: elektro-edge
    clientSecret:
      name: edge-oidc
    scopes:
    - openid
    - profile
    - email
    forwardAccessToken: true
    passThroughAuthHeader: true
    refreshToken: true
    cookieConfig:
      sameSite: Lax
  jwt:
    providers:
    - name: keycloak
      issuer: https://${IDENTITY_HOST}/realms/elektro
      audiences:
      - elektro-edge
      remoteJWKS:
        uri: http://keycloak.identity.svc.cluster.local:8080/realms/elektro/protocol/openid-connect/certs
  extAuth:
    grpc:
      backendRefs:
      - name: authorino
        namespace: authorization
        port: 50051
    failOpen: false
    timeout: 4s
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: edge-authorino
  namespace: authorization
spec:
  from:
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: edge
  to:
  - group: ''
    kind: Service
    name: authorino
